# graduation-project-advisor

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_empty_initial.py  0002_project_candidates.py  0003_feedback.py  0004_ingestion_ops.py
backend/api/: main.py
backend/api/routes/: feedback.py  ingest_status.py  recommendations.py
backend/api/schemas/: blueprint.py  intent.py  recommendation.py  refine.py
backend/core/: logging.py  session_store.py  settings.py
backend/core/db/: base.py  models.py
backend/core/embeddings/: encoder.py  qdrant_client.py
backend/core/llm/: azure.py  gateway.py  ollama.py  prompts.py  prompts_rag.py  prompts_refine.py
backend/core/recommendation/: context.py  retrieve.py
backend/ingestion/: celery_app.py  normalize.py  run.py  runner.py  tasks.py  upsert.py
backend/ingestion/pipelines/: arxiv.py  github_trending.py  hf_papers.py
backend/tests/: conftest.py
backend/tests/unit/: test_health.py  test_logging.py  test_settings.py
frontend/: Dockerfile.dev  biome.json  i18n.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/app/: globals.css
frontend/app/[locale]/: layout.tsx  (+1 more)
frontend/components/: app-header.tsx  atmospheric-bg.tsx  blueprint-view.tsx  board-view.tsx  card-actions.tsx  idea-card.tsx  onboard-form.tsx  refine-bar.tsx  saved-view.tsx
frontend/lib/: api.ts  fonts.ts
frontend/messages/: ar.json  en.json
frontend/tests/: home.test.tsx
(+7 files in other folders)
